--- a/src/popup.css
+++ b/src/popup.css
@@ -26,6 +26,32 @@ body {
     font-family: Roboto, sans-serif;
 }
 
+.preferences {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: 1px solid var(--gray);
+    width: 20px;
+    height: 20px;
+    border-radius: 2px;
+    background: var(--gray);
+    cursor: pointer;
+}
+
+.preferences svg {
+    width: 11px;
+    height: auto;
+    fill: #FFF;
+}
+
+.preferences:hover {
+    background-color: var(--gray-shade-1);
+    border-color: var(--gray-shade-1);
+}
+
 header {
     padding: 10px;
     padding-top: 14px;
@@ -55,12 +81,45 @@ header .title {
 .stylesheets-message {
     letter-spacing: 0.6px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 60px;
     padding: 0 10px;
     text-transform: uppercase;
     color: #C3C3C3;
+    font-size: 12px;
+}
+
+.stylesheets-message button {
+    font-size: 12px;
+    font-weight: bold;
+    height: 30px;
+    line-height: 1;
+    background-color: var(--green);
+    border-color: var(--green);
+    color: #FFF;
+    cursor: pointer;
+    text-transform: uppercase;
+    border: 0;
+    margin-top: 10px;
+    padding: 10px 12px;
+    border-radius: 3px;
+    box-sizing: border-box;
+}
+
+.stylesheets-message button:hover {
+    background-color: var(--green-shade-1);
+    border-color: var(--green-shade-1);
+}
+
+.stylesheets-message button:active {
+    box-shadow: inset 0px 3px 5px rgba(0, 0, 0, 0.3);
+}
+
+.stylesheets-message button:focus {
+    outline: none;
+    border-color: var(--green);
 }
 
 .stylesheets-list {
